--- a/pom.xml
+++ b/pom.xml
@@ -85,13 +85,11 @@
       <artifactId>hadoop-yarn-client</artifactId>
       <version>${hadoop.version}</version>
     </dependency>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
     </dependency>
-
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
@@ -107,7 +105,6 @@
       <artifactId>scala-reflect</artifactId>
       <version>${scala.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-scala_${scala.main}</artifactId>
@@ -116,11 +113,6 @@
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-streaming-scala_${scala.main}</artifactId>
-      <version>${flink.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.flink</groupId>
-      <artifactId>flink-connector-kafka-0.8_${scala.main}</artifactId>
       <version>${flink.version}</version>
     </dependency>
     <dependency>
@@ -137,6 +129,26 @@
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-clients_${scala.main}</artifactId>
       <version>${flink.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-connector-kafka-0.8_${scala.main}</artifactId>
+      <version>${flink.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.bahir</groupId>
+      <artifactId>flink-connector-redis_${scala.main}</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.dropwizard.metrics</groupId>
+      <artifactId>metrics-graphite</artifactId>
+      <version>3.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.yammer.metrics</groupId>
+      <artifactId>metrics-core</artifactId>
+      <version>2.2.0</version>
     </dependency>
   </dependencies>
 
@@ -208,6 +220,15 @@
               <artifactSet>
                 <includes>
                   <include>org.apache.flink:flink-table_${scala.main}</include>
+                  <include>org.apache.flink-connector-filesystem_${scala.main}</include>
+                  <include>org.apache.flink:flink-connector-kafka-*</include>
+                  <include>org.apache.kafka:*</include>
+                  <include>org.apache.bahir:*</include>
+                  <include>org.apache.commons:commons-pool2</include>
+                  <include>redis.clients:jedis</include>
+                  <include>io.dropwizard.metrics:*</include>
+                  <include>com.yammer.metrics:*</include>
+                  <include>com.101tec:*</include>
                 </includes>
               </artifactSet>
             </configuration>
