--- a/flink_stream/src/main/resources/fixed-params.conf
+++ b/flink_stream/src/main/resources/fixed-params.conf
@@ -5,7 +5,7 @@
       "kafka_broker":"artemis-02:9092,artemis-03:9092,artemis-04:9092"
     },
     "graphite":{
-      "graphite_host":"10.1.7.119",
+      "graphite_host":"artemis-02",
       "graphite_port":"2004",
       "graphite_batchSize":"10000"
     },
