--- a/flink_stream/src/main/resources/fixed-params.conf
+++ b/flink_stream/src/main/resources/fixed-params.conf
@@ -5,7 +5,7 @@
       "kafka_broker":"artemis-02:9092,artemis-03:9092,artemis-04:9092"
     },
     "graphite":{
-      "graphite_host":"artemis-02",
+      "graphite_host":"artemis-04",
       "graphite_port":"2004",
       "graphite_batchSize":"10000"
     },
@@ -15,7 +15,20 @@
       "redis_db":"0"
     }
   },
-  "product":{
-
+  "public":{
+    "zk_kafka":{
+      "zk_connect":"",
+      "kafka_broker":""
+    },
+    "graphite":{
+      "graphite_host":"",
+      "graphite_port":"",
+      "graphite_batchSize":""
+    },
+    "redis":{
+      "redis_host":"",
+      "redis_port":"",
+      "redis_db":""
+    }
   }
 }
