--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,19 @@
     <module>flink_stream</module>
   </modules>
 
+  <repositories>
+    <repository>
+      <id>aliyun</id>
+      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <properties>
     <sonar.language>java</sonar.language>
     <java.version>1.8</java.version>
@@ -37,13 +50,14 @@
     <test.src.dir>src/test/java</test.src.dir>
     <test.res.dir>src/test/resources</test.res.dir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <scala.version>2.11.11</scala.version>
-    <scala.main>2.11</scala.main>
-    <hadoop.version>2.4.1</hadoop.version>
-    <flink.version>1.4.2</flink.version>
+    <scala.version>2.12.8</scala.version>
+    <scala.main>2.12</scala.main>
+    <hadoop.version>2.7.7</hadoop.version>
+    <flink.version>1.7.2</flink.version>
     <jarfile.name>LearnFlink</jarfile.name>
     <jar.out.dir>jar</jar.out.dir>
     <maven.build.timestamp.format>yyyyMMdd-HHmmss</maven.build.timestamp.format>
+    <alluxio.version>2.1.0</alluxio.version>
   </properties>
 
   <dependencies>
@@ -57,7 +71,7 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.4</version>
+      <version>2.6</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
@@ -75,19 +89,9 @@
       <version>${hadoop.version}</version>
     </dependency>
     <dependency>
-      <groupId>hadoop-lzo</groupId>
-      <artifactId>hadoop-lzo</artifactId>
-      <version>0.4.15</version>
-    </dependency>
-    <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-yarn-client</artifactId>
       <version>${hadoop.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
     </dependency>
     <dependency>
       <groupId>org.scala-lang</groupId>
@@ -121,6 +125,17 @@
     </dependency>
     <dependency>
       <groupId>org.apache.flink</groupId>
+      <artifactId>flink-hadoop-compatibility_${scala.main}</artifactId>
+      <version>${flink.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-hadoop-fs</artifactId>
+      <version>${flink.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.flink</groupId>
       <artifactId>flink-table_${scala.main}</artifactId>
       <version>${flink.version}</version>
     </dependency>
@@ -131,23 +146,26 @@
     </dependency>
     <dependency>
       <groupId>org.apache.flink</groupId>
-      <artifactId>flink-connector-kafka-0.8_${scala.main}</artifactId>
+      <artifactId>flink-connector-kafka_${scala.main}</artifactId>
       <version>${flink.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.apache.bahir</groupId>
-      <artifactId>flink-connector-redis_${scala.main}</artifactId>
+      <artifactId>flink-connector-redis_2.11</artifactId>
       <version>1.0</version>
     </dependency>
     <dependency>
-      <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-graphite</artifactId>
-      <version>3.1.2</version>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.yammer.metrics</groupId>
-      <artifactId>metrics-core</artifactId>
-      <version>2.2.0</version>
+      <groupId>org.alluxio</groupId>
+      <artifactId>alluxio-2.1.0-client</artifactId>
+      <version>${alluxio.version}</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/lib/alluxio-2.1.0-client.jar</systemPath>
     </dependency>
   </dependencies>
 
@@ -185,6 +203,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
